# utmost-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  justfile  release-plz.toml  sample_specs.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  release.yml
coverage/: tarpaulin-report.html
crates/utmost-cli/: Cargo.toml
crates/utmost-cli/src/: main.rs
crates/utmost-lib/: Cargo.toml
crates/utmost-lib/benches/: search_benches.rs
crates/utmost-lib/src/: engine.rs  engine_old.rs  jpeg_huffman.rs  jpeg_recover.rs  lib.rs  reporting.rs  search.rs  search_specs.rs  types.rs
crates/utmost-lib/src/engine/: bmp.rs  exe.rs  gif.rs  gz.rs  jpg.rs  mov.rs  mpg.rs  pdf.rs  png.rs  zip.rs
src/: engine.rs  main.rs  search.rs  search_specs.rs  types.rs
