[package]
name = "utmost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
dotenvy = "0.15.7"
indicatif = "0.17"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "full",
    "rt-multi-thread",
    "tracing",
] }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
