[package]
name = "utmost-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for Utmost file carving tool"
license = "MIT OR Apache-2.0"

[[bin]]
name = "utmost"
path = "src/main.rs"

[dependencies]
utmost-lib = { path = "../utmost-lib", version = "0.1.0" }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
indicatif = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.37"
gethostname = "1.1"
libc = "0.2"
