[package]
name = "utmost-lib"
version = "0.1.0"
edition = "2024"
description = "Core file carving library for Utmost"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
serde_json = "1.0"

[features]
default = []
