[package]
name = "utmost-lib"
version = "0.1.0"
edition = "2024"
description = "Core file carving library for Utmost"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
serde_json = "1.0"

[features]
default = []
