[package]
name = "utmost-lib"
version = "0.1.0"
edition = "2024"
description = "Core file carving library for Utmost"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
# strip = true
codegen-units = 1
opt-level = 3

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
aho-corasick = "1"

[dev-dependencies]
tempfile = "3.10"
serde_json = "1.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "search_benches"
harness = false

[features]
default = []
